<resources>
    <string name="app_name">Les_Intents</string>
    <string name="view_hello">Veillez taper vous connecter</string>
    <string name="votre_pseudo">Votre pseudo</string>
    <string name="votre_mot_de_passe">Votre mot de passe</string>
    <string name="view_logo">Bienvenue sur Bombilafou!</string>
    <string name="Se_connecter">Se Connecter</string>
    <string name="Titre">Bienvenue à votre page perso</string>
    <string name="welcome">Bonjour</string>
    <string name="byebye">Se Deconnecter</string>
    <string name="Visite">Visiter bombilafou.com</string>
    <string name="PasserAautreActivite">Ouvrir dialog button</string>


    <string name="hello">Hello World, PreferenceSimpleTuto!</string>
    <string name="appname">PreferenceSimpleTuto</string>
    <string name="checkbox">Check Box</string>
    <string name="ringtone">Ring Tone</string>
    <string name="checkbox2">Check Box2</string>
    <string name="text">Text</string>
    <string name="list">List</string>
    <string-array name="i_like_array">
        <item>chocolate</item>
        <item>television</item>
        <item>internet</item>
        <item>nicotine</item>
        <item>hug</item>
        <item>Santa Claus</item>
    </string-array>
</resources>