<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#2c2e4f"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/Titre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/view_second_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/my_layout">

    </LinearLayout>
    <Button
        android:id="@+id/SeDeconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/byebye"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/Visiter_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Visite"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/file_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasserAautreActivite"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>