<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_logo"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#2c2e4f"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="40dp"

    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_hello"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:padding="20dp"

        />
    <EditText
        android:id="@+id/view_pseudo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/votre_pseudo"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/view_pass"
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/votre_mot_de_passe"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/Se_connecter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:layout_gravity="center"
        android:gravity="center"
        />


</LinearLayout>